--- a/src/index.css
+++ b/src/index.css
@@ -39,5 +39,17 @@
     img {
       @apply align-middle;
     }
+ 
 }
+
+
+
+/* @layer components {
+  .form-control {
+    @apply mb-6 space-y-2.5;
+  }
+  .auth_input {
+    @apply w-full border border-gray-300 rounded-full px-4 py-3 focus:outline-none focus:ring-2 focus:ring-primary
+  }
+} */
   
